--- a/FinalProj/4B_Mechanism.ipynb
+++ b/FinalProj/4B_Mechanism.ipynb
@@ -1563,7 +1563,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 175,
+   "execution_count": 176,
    "id": "c88fce5f",
    "metadata": {},
    "outputs": [
@@ -1571,13 +1571,26 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "301\n"
+      "301\n",
+      "0       4.712389\n",
+      "1       4.712389\n",
+      "2       4.759489\n",
+      "3       4.806589\n",
+      "4       4.853689\n",
+      "         ...    \n",
+      "296    18.606889\n",
+      "297    18.653989\n",
+      "298    18.701089\n",
+      "299    18.748189\n",
+      "300    18.795289\n",
+      "Name: theta_2 [rad], Length: 301, dtype: float64\n"
      ]
     }
    ],
    "source": [
     "df.to_csv('4bardata.txt', sep='\\t', header = None, index=False)\n",
-    "print(df.shape[0])\n"
+    "print(df.shape[0])\n",
+    "\n"
    ]
   }
  ],
