--- a/FinalProj/4B_Mechanism.ipynb
+++ b/FinalProj/4B_Mechanism.ipynb
@@ -886,12 +886,24 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 1,
    "id": "subject-wednesday",
    "metadata": {
     "id": "subject-wednesday"
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "ename": "NameError",
+     "evalue": "name 'position' is not defined",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mNameError\u001b[0m                                 Traceback (most recent call last)",
+      "Cell \u001b[0;32mIn[1], line 3\u001b[0m\n\u001b[1;32m      1\u001b[0m \u001b[38;5;66;03m# Create plot for each position\u001b[39;00m\n\u001b[0;32m----> 3\u001b[0m \u001b[38;5;28;01mfor\u001b[39;00m idx, i \u001b[38;5;129;01min\u001b[39;00m \u001b[38;5;28menumerate\u001b[39m(\u001b[43mposition\u001b[49m):\n\u001b[1;32m      4\u001b[0m     plt\u001b[38;5;241m.\u001b[39mplot([\u001b[38;5;241m0\u001b[39m, a \u001b[38;5;241m*\u001b[39m cos(i[\u001b[38;5;241m0\u001b[39m])], [\u001b[38;5;241m0\u001b[39m, a \u001b[38;5;241m*\u001b[39m sin(i[\u001b[38;5;241m0\u001b[39m])], \u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mg\u001b[39m\u001b[38;5;124m\"\u001b[39m)\n\u001b[1;32m      5\u001b[0m     plt\u001b[38;5;241m.\u001b[39mplot([a \u001b[38;5;241m*\u001b[39m cos(i[\u001b[38;5;241m0\u001b[39m]), a \u001b[38;5;241m*\u001b[39m cos(i[\u001b[38;5;241m0\u001b[39m]) \u001b[38;5;241m+\u001b[39m b \u001b[38;5;241m*\u001b[39m cos(i[\u001b[38;5;241m1\u001b[39m])], [a \u001b[38;5;241m*\u001b[39m sin(i[\u001b[38;5;241m0\u001b[39m]), a \u001b[38;5;241m*\u001b[39m sin(i[\u001b[38;5;241m0\u001b[39m]) \u001b[38;5;241m+\u001b[39m b \u001b[38;5;241m*\u001b[39m sin(i[\u001b[38;5;241m1\u001b[39m])], \u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mr\u001b[39m\u001b[38;5;124m\"\u001b[39m)\n",
+      "\u001b[0;31mNameError\u001b[0m: name 'position' is not defined"
+     ]
+    }
+   ],
    "source": [
     "# Create plot for each position\n",
     "\n",
