--- a/FinalProj/Final_Project_V3_JNotebook.ipynb
+++ b/FinalProj/Final_Project_V3_JNotebook.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 81,
+   "execution_count": 1,
    "id": "c063bb9c",
    "metadata": {},
    "outputs": [
@@ -38,7 +38,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 82,
+   "execution_count": 2,
    "id": "aeb71861",
    "metadata": {},
    "outputs": [],
@@ -53,7 +53,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 83,
+   "execution_count": 3,
    "id": "c8862bf8",
    "metadata": {},
    "outputs": [],
@@ -70,7 +70,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 84,
+   "execution_count": 4,
    "id": "abf653ac",
    "metadata": {},
    "outputs": [],
@@ -82,7 +82,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 85,
+   "execution_count": 5,
    "id": "0fbcbbfe",
    "metadata": {},
    "outputs": [],
@@ -114,7 +114,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 86,
+   "execution_count": 6,
    "id": "6d833272",
    "metadata": {},
    "outputs": [
@@ -312,7 +312,7 @@
        "4  -21.4029952122759  -53.1387334810856  "
       ]
      },
-     "execution_count": 86,
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -352,7 +352,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 87,
+   "execution_count": 7,
    "id": "24c7ab80",
    "metadata": {},
    "outputs": [],
@@ -367,7 +367,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 88,
+   "execution_count": 8,
    "id": "a387bd3d",
    "metadata": {},
    "outputs": [],
@@ -382,9 +382,9 @@
     "df[\"pos_angular [rad]\"] = theta_w\n",
     "df[\"pos_angular [°]\"] = (theta_w * 180 /np.pi) % 360\n",
     "for i in range(df.shape[0]):\n",
-    "    temp20 = abs(l/2 * cos(theta_w[i])) + 0\n",
+    "    temp20 = abs(l/2 * cos(theta_w[i])) \n",
     "    x_cor.append(temp20)\n",
-    "    temp21 = abs(l/2 * sin(theta_w[i]))+ 0\n",
+    "    temp21 = abs(l/2 * sin(theta_w[i]))\n",
     "    y_cor.append(temp21)\n",
     "df[\"position x [m]\"] = x_cor\n",
     "df[\"position y [m]\"] = y_cor\n",
@@ -395,7 +395,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 89,
+   "execution_count": 9,
    "id": "c5791145",
    "metadata": {},
    "outputs": [
@@ -615,7 +615,7 @@
        "[5 rows x 26 columns]"
       ]
      },
-     "execution_count": 89,
+     "execution_count": 9,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -626,7 +626,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 90,
+   "execution_count": 10,
    "id": "dd59ebb2",
    "metadata": {},
    "outputs": [
