--- a/FinalProj/Final_Project_V3_JNotebook.ipynb
+++ b/FinalProj/Final_Project_V3_JNotebook.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 135,
+   "execution_count": 1,
    "id": "c063bb9c",
    "metadata": {},
    "outputs": [
@@ -38,7 +38,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 136,
+   "execution_count": 2,
    "id": "aeb71861",
    "metadata": {},
    "outputs": [],
@@ -53,7 +53,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 137,
+   "execution_count": 3,
    "id": "c8862bf8",
    "metadata": {},
    "outputs": [],
@@ -70,7 +70,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 138,
+   "execution_count": 4,
    "id": "abf653ac",
    "metadata": {},
    "outputs": [],
@@ -82,7 +82,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 139,
+   "execution_count": 5,
    "id": "0fbcbbfe",
    "metadata": {},
    "outputs": [],
@@ -114,7 +114,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 140,
+   "execution_count": 6,
    "id": "6d833272",
    "metadata": {},
    "outputs": [
@@ -312,7 +312,7 @@
        "4  -21.4029952122759  -53.1387334810856  "
       ]
      },
-     "execution_count": 140,
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -352,7 +352,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 141,
+   "execution_count": 7,
    "id": "24c7ab80",
    "metadata": {},
    "outputs": [],
@@ -367,7 +367,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 142,
+   "execution_count": 8,
    "id": "a387bd3d",
    "metadata": {},
    "outputs": [],
@@ -399,7 +399,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 143,
+   "execution_count": 9,
    "id": "c5791145",
    "metadata": {},
    "outputs": [
@@ -619,7 +619,7 @@
        "[5 rows x 27 columns]"
       ]
      },
-     "execution_count": 143,
+     "execution_count": 9,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -630,7 +630,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 144,
+   "execution_count": 11,
+   "id": "89ea3979",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#Tracker Stuff\n",
+    "\n",
+    "t_tracker = np.genfromtxt(\"fast_data_final.txt\", skip_header=1, usecols=0 ) #time from tracker\n",
+    "x_tracker = np.genfromtxt(\"fast_data_final.txt\", skip_header=1, usecols=1 ) \n",
+    "y_tracker = np.genfromtxt(\"fast_data_final.txt\", skip_header=1, usecols=2 ) "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 10,
    "id": "dd59ebb2",
    "metadata": {},
    "outputs": [
